<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:padding="16dp"
    tools:context=".Quiz">


    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_score"
        android:textColor="@color/black"
        android:freezesText="true"/>


    <TextView
        android:id="@+id/tvQuestionC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvScore"
        android:text="@string/tv_question"
        android:textColor="@color/black"
        android:freezesText="true"/>
    <TextView
        android:id="@+id/tvQuestionDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvQuestionC"
        android:text="@string/tv_difficulty"
        android:textColor="@color/black"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/tvQuestionCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvQuestionDifficulty"
        android:text="@string/tv_category"
        android:textColor="@color/black"
        android:freezesText="true"/>



    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_time"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_alignParentEnd="true"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/RadioGroup"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_q"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:freezesText="true"/>


    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <RadioButton
            android:id="@+id/rbOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_option1"
            android:freezesText="true"/>


        <RadioButton
            android:id="@+id/rbOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_option2"
            android:freezesText="true"/>


        <RadioButton
            android:id="@+id/rbOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_option3"
            android:freezesText="true"/>


        <RadioButton
            android:id="@+id/rbOption4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_option4"
            android:freezesText="true"/>



    </RadioGroup>


    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RadioGroup"
        android:layout_marginTop="16dp"
        android:text="@string/btn_conf"
        android:freezesText="true"/>


</RelativeLayout>